--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@ body {
 }
 
 .weather-body {
-  background-color: #fbf2d5;
+  background-color: #efddb2;
   max-width: 600px;
   margin: 30px auto;
   padding: 15px;
@@ -43,6 +43,16 @@ body {
   color: #0000;
 }
 
+h1 {
+  font-weight: bold;
+  border: solid;
+  border-color: #9896f1;
+  border-width: 1.5px;
+  border-radius: 10px;
+  background-color: #9896f1;
+  color: #ffff;
+}
+
 .temp {
   font-size: 70px;
 }
@@ -51,17 +61,26 @@ body {
   text-transform: capitalize;
 }
 
-.col2 .active {
-  color: black;
-  cursor: default;
-}
-
-.col2 .active:hover {
-  text-decoration: none;
+.col2 {
+  font-size: 50px;
 }
 
 .open-source {
   text-align: center;
   font-family: "Quicksand", sans-serif;
   font-size: 15px;
+}
+
+.col-2 {
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-weight: bold;
+  border: solid;
+  border-color: #9896f1;
+  border-width: 1.5px;
+  border-radius: 10px;
+  background-color: #9896f1;
+  color: #ffff;
 }
